--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <script>
     (async () => {
-      const socket = new WebSocket('wss://x-q63z.onrender.com');
+      const socket = new WebSocket('wss://projectxxx.onrender.com');
 
       function hideBannedScreen() {
         document.querySelectorAll('.js-banned-screen').forEach(bannedScreen => {
