--- a/index.html
+++ b/index.html
@@ -12,36 +12,84 @@
 <body>
   <div id="root"></div>
   <script type="text/babel">
-    function Header() {
+    function NavBar() {
+      const scrollToSection = (sectionId) => {
+        const element = document.getElementById(sectionId);
+        if (element) {
+          element.scrollIntoView({ behavior: 'smooth' });
+        }
+      };
+
       return (
-        <header className="bg-gradient-to-r from-blue-600 to-purple-600 text-white py-6">
-          <div className="container mx-auto px-4">
-            <h1 className="text-4xl font-bold text-center">Добро пожаловать!</h1>
-            <p className="text-center mt-2">Современный и стильный сайт</p>
+        <nav className="bg-gradient-to-r from-blue-600 to-purple-600 text-white py-4 fixed w-full top-0 z-10">
+          <div className="container mx-auto px-4 flex justify-center space-x-8">
+            <button 
+              onClick={() => scrollToSection('home')} 
+              className="hover:text-gray-200 font-semibold transition duration-300"
+            >
+              Главная
+            </button>
+            <button 
+              onClick={() => scrollToSection('info')} 
+              className="hover:text-gray-200 font-semibold transition duration-300"
+            >
+              Информация
+            </button>
+            <button 
+              onClick={() => scrollToSection('contacts')} 
+              className="hover:text-gray-200 font-semibold transition duration-300"
+            >
+              Контакты
+            </button>
           </div>
-        </header>
+        </nav>
       );
     }
 
-    function MainSection() {
+    function HomeSection() {
       return (
-        <section className="py-12 bg-gray-100">
+        <section id="home" className="min-h-screen flex items-center justify-center bg-gray-100">
+          <div className="container mx-auto px-4 text-center">
+            <h1 className="text-5xl font-bold text-gray-800 mb-4">Добро пожаловать на наш сайт!</h1>
+            <p className="text-lg text-gray-600">Мы создаем современные и стильные решения для вас.</p>
+          </div>
+        </section>
+      );
+    }
+
+    function InfoSection() {
+      return (
+        <section id="info" className="min-h-screen flex items-center justify-center bg-white">
           <div className="container mx-auto px-4">
-            <h2 className="text-3xl font-semibold text-center text-gray-800 mb-8">О нас</h2>
+            <h2 className="text-4xl font-semibold text-center text-gray-800 mb-8">Информация</h2>
             <div className="grid grid-cols-1 md:grid-cols-3 gap-6">
-              <div className="bg-white p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform duration-300">
-                <h3 className="text-xl font-bold text-gray-800">Качество</h3>
-                <p className="mt-2 text-gray-600">Мы создаем продукты с акцентом на качество и детали.</p>
+              <div className="bg-gray-100 p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform duration-300">
+                <h3 className="text-xl font-bold text-gray-800">Наша миссия</h3>
+                <p className="mt-2 text-gray-600">Предоставлять качественные услуги и продукты.</p>
               </div>
-              <div className="bg-white p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform duration-300">
-                <h3 className="text-xl font-bold text-gray-800">Инновации</h3>
-                <p className="mt-2 text-gray-600">Используем новейшие технологии для вашего удобства.</p>
+              <div className="bg-gray-100 p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform duration-300">
+                <h3 className="text-xl font-bold text-gray-800">Технологии</h3>
+                <p className="mt-2 text-gray-600">Используем передовые технологии для инноваций.</p>
               </div>
-              <div className="bg-white p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform duration-300">
-                <h3 className="text-xl font-bold text-gray-800">Поддержка</h3>
-                <p className="mt-2 text-gray-600">Всегда готовы помочь вам 24/7.</p>
+              <div className="bg-gray-100 p-6 rounded-lg shadow-lg transform hover:scale-105 transition-transform duration-300">
+                <h3 className="text-xl font-bold text-gray-800">Команда</h3>
+                <p className="mt-2 text-gray-600">Профессионалы, готовые воплотить ваши идеи.</p>
               </div>
             </div>
+          </div>
+        </section>
+      );
+    }
+
+    function ContactsSection() {
+      return (
+        <section id="contacts" className="min-h-screen flex items-center justify-center bg-gray-100">
+          <div className="container mx-auto px-4 text-center">
+            <h2 className="text-4xl font-semibold text-gray-800 mb-8">Контакты</h2>
+            <p className="text-lg text-gray-600 mb-4">Свяжитесь с нами:</p>
+            <p className="text-gray-600">Email: example@email.com</p>
+            <p className="text-gray-600">Телефон: +7 (999) 123-45-67</p>
+            <p className="text-gray-600">Адрес: г. Москва, ул. Примерная, д. 123</p>
           </div>
         </section>
       );
@@ -51,7 +99,7 @@
       return (
         <footer className="bg-gray-800 text-white py-6">
           <div className="container mx-auto px-4 text-center">
-            <p>&copy; 2025 Красивый сайт. Все права защищены.</p>
+            <p>© 2025 Красивый сайт. Все права защищены.</p>
           </div>
         </footer>
       );
@@ -60,9 +108,13 @@
     function App() {
       return (
         <div>
-          <Header />
-          <MainSection />
-          <Footer />
+          <NavBar />
+          <div className="pt-16">
+            <HomeSection />
+            <InfoSection />
+            <ContactsSection />
+            <Footer />
+          </div>
         </div>
       );
     }
